--- a/index.html
+++ b/index.html
@@ -889,6 +889,95 @@
       </div>
     </section>
     <!-- Contact-us-->
+    <!-- Footer-->
+    <footer>
+      <div class="main-container">
+        <div class="row">
+          <div class="col-xl-6 col-lg-5">
+            <div class="lts-connect">
+              <h2 class="subheading">Let’s Connect</h2>
+              <p>now it’s time to teel the whole world about your business.</p>
+              <a href="#" class="slide-btn white-btn">
+                <span>
+                  <svg
+                    width="17"
+                    height="17"
+                    viewBox="0 0 17 17"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.0625 17C1.38125 17 1.59375 16.8938 1.80625 16.6813L16.6812 1.80625C17.1062 1.38125 17.1062 0.74375 16.6812 0.31875C16.2562 -0.10625 15.6188 -0.10625 15.1938 0.31875L0.318748 15.1937C-0.106251 15.6187 -0.106251 16.2563 0.318748 16.6813C0.53125 16.8938 0.74375 17 1.0625 17Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M15.9375 10.625C16.575 10.625 17 10.2 17 9.5625V1.0625C17 0.425 16.575 0 15.9375 0H7.4375C6.8 0 6.375 0.425 6.375 1.0625C6.375 1.7 6.8 2.125 7.4375 2.125H14.875V9.5625C14.875 10.2 15.3 10.625 15.9375 10.625Z"
+                      fill="white"
+                    />
+                  </svg>
+                </span>
+                Send a Mail
+              </a>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-7">
+            <div class="row">
+              <div class="col-lg-3 col-sm-4 col-6 mb-4 mb-sm-0">
+                <div class="widget">
+                  <h5>Quick Links</h5>
+                  <ul>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">technologies</a></li>
+                    <li><a href="#">Case Studies</a></li>
+                    <li><a href="#">Our Culture</a></li>
+                    <li><a href="#">About Cody</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-5 col-sm-4 col-6 mb-4 mb-sm-0">
+                <div class="widget">
+                  <h5>Services</h5>
+                  <ul>
+                    <li><a href="#">App/ Website Design</a></li>
+                    <li><a href="#">App/ Website Development</a></li>
+                    <li><a href="#">Custom App And Website</a></li>
+                    <li><a href="#">IoT and AI/ML</a></li>
+                    <li><a href="#">Cloud and DevOps</a></li>
+                    <li><a href="#">SaaS Application Development</a></li>
+                    <li><a href="#">System Design</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-4 col-auto">
+                <div class="widget">
+                  <h5>Get In Touch</h5>
+                  <div>
+                    <strong>Email id:</strong>
+                    <small>codytech@gmail.com</small>
+                  </div>
+
+                  <div>
+                    <strong>Phone no:</strong>
+                    <small>(+91) 123 123 1234 /</small>
+                    <small>(+91) 456 789 8523</small>
+                  </div>
+
+                  <div>
+                    <strong>Address</strong>
+                    <small>West Bengal, India</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Footer-->
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
