--- a/index.html
+++ b/index.html
@@ -571,23 +571,43 @@
         <div class="ani-container">
           <div class="round-container">
             <div class="exp-one brdr">
-              <img src="assets/images/experts-one.png" alt="experts">
+              <img src="assets/images/experts-one.png" alt="experts" />
             </div>
             <div class="exp-two brdr">
-              <img src="assets/images/experts-two.png" alt="experts">
+              <img src="assets/images/experts-two.png" alt="experts" />
             </div>
             <div class="exp-three brdr">
-              <img src="assets/images/experts-three.png" alt="experts">
+              <img src="assets/images/experts-three.png" alt="experts" />
+            </div>
+            <div class="exp-four brdr">
+              <img src="assets/images/experts-four.png" alt="experts" />
+            </div>
+            <div class="exp-five brdr">
+              <img src="assets/images/experts-five.png" alt="experts" />
+            </div>
+            <div class="exp-six brdr">
+              <img src="assets/images/experts-six.png" alt="experts" />
+            </div>
+            <div class="exp-seven brdr">
+              <img src="assets/images/experts-seven.png" alt="experts" />
+            </div>
+
+            <div class="exp-eight brdr">
+              <img src="assets/images/experts-eight.png" alt="experts" />
+            </div>
+
+            <div class="exp-nine brdr">
+              <img src="assets/images/experts-nine.png" alt="experts" />
             </div>
           </div>
-        <div class="tx-bx">
-          <h2 class="heading">Meet Our Experts</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          <div class="tx-bx">
+            <h2 class="heading">Meet Our Experts</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
         </div>
-      </div>
       </div>
     </section>
     <!--Meet-our-experts-->
