--- a/index.html
+++ b/index.html
@@ -571,32 +571,41 @@
         <div class="ani-container">
           <div class="round-container">
             <div class="exp-one brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-one.png" alt="experts" />
             </div>
             <div class="exp-two brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-two.png" alt="experts" />
             </div>
             <div class="exp-three brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-three.png" alt="experts" />
             </div>
             <div class="exp-four brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-four.png" alt="experts" />
             </div>
             <div class="exp-five brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-five.png" alt="experts" />
             </div>
             <div class="exp-six brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-six.png" alt="experts" />
             </div>
             <div class="exp-seven brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-seven.png" alt="experts" />
             </div>
 
             <div class="exp-eight brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-eight.png" alt="experts" />
             </div>
 
             <div class="exp-nine brdr">
+              <span>Khalid Mahmud</span>
               <img src="assets/images/experts-nine.png" alt="experts" />
             </div>
           </div>
