--- a/index.html
+++ b/index.html
@@ -943,6 +943,13 @@
           </div>
         </form>
       </div>
+
+      <div class="contact-float">
+        <p>Cody Technologies</p>
+        <a href="tel:+91 1231231234">(+91) 123 123 1234</a>
+        <a href="mailto:codytech@gmail.com">codytech@gmail.com</a>
+        <p>West Bengal, India</p>
+      </div>
     </section>
     <!-- Contact-us-->
     <!-- Footer-->
